tests/paczka1/fuzzy1/59784497.err
Error in line 11: dMDToguUu7h S657 61,4
Error in line 15: dMDToguUu7h A898 68,8
Error in line 20: A938 S657 68,7
Error in line 22: A938 A898 32,1
Error in line 32: dMDToguUu7h S657 27,7
Error in line 33: A938 A367 17,3
